# AI.InfraCalculator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  gitleaks.toml  redeploy.sh
.github/: dependabot.yml  pull_request_template.md
app/: .dockerignore  Dockerfile  README.md  gpu_data.json  gpu_data_raw.json  gpu_normalizer.py  gpu_scraper.py  main.py  reportTemplate.xlsx  report_generator.py  requirements.txt
backend/: .dockerignore  Dockerfile  README.md  errors.py  gpu_data.json  gpu_data_raw.json  gpu_normalizer.py  gpu_scraper.py  llm_data.json  logging_config.py  main.py  pyproject.toml  reportTemplate.xlsx  report_generator.py  settings.py
backend/api/: __init__.py  gpu_handlers.py  sizing_handlers.py
backend/core/: __init__.py  methodology_constants.py  sizing_math.py
backend/models/: README.md  __init__.py  gpu.py  llm.py  sizing.py
backend/scripts/: check_coverage_thresholds.py  gpu_catalog_pipeline.py
backend/services/: auto_optimize_service.py  gpu_catalog_service.py  gpu_refresh_service.py  llm_catalog_service.py  ocr_sizing_service.py  report_service.py  sizing_service.py  vlm_sizing_service.py
backend/services/gpu_catalog_pipeline/: __init__.py  normalizer.py  scraper.py
backend/tests/: conftest.py  payload.json  test_api_integration.py  test_auto_optimize_scoring.py  test_gateway_quotas.py  test_golden_sizing.py  test_gpu_catalog_v3.py  test_llm_catalog_service.py  test_models_gpu.py  test_ocr_sizing.py  test_sizing.py  test_sizing_math_guards.py  test_sizing_properties.py  test_vlm_sizing.py  whatif.json
backend/tests/fixtures/golden/: baseline_small.json  high_load_enterprise.json  long_context_compute_bound.json  memory_not_fit_error.json  ocr_cpu_baseline_online.json  ocr_gpu_baseline_online.json  ocr_multiclass_mixed.json  validation_error_negative_users.json  vlm_a4_baseline_online.json  vlm_combined_window.json  vlm_multiclass_mixed.json
backend/tests/regression/: test_gpu_handlers_units.py  test_gpu_refresh_service.py  test_logging_config.py  test_main_lifespan.py  test_normalizer_baseline.py  test_normalizer_helpers.py  test_report_baseline.py  test_scraper_baseline.py  test_scraper_pipeline.py  test_settings_parsing.py  test_sizing_handlers_units.py  test_sizing_service_branches.py
backend/tests/regression/fixtures/normalizer_expected/: sample_expected.json
backend/tests/regression/fixtures/normalizer_raw/: sample_raw.json
backend/tests/regression/fixtures/scraper_html/: nvidia_sample.html
contracts/: input.py  output.py
docs/: architecture.md  ci.md  index.md  (+10 more)
(+92 files in other folders)
