[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ai-server-calculator-backend"
version = "0.1.0"
description = "Backend API for AI/LLM server sizing calculations."
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = { text = "MIT" }
authors = [{ name = "AI Server Calculator Maintainers" }]
dependencies = [
  "apscheduler==3.10.4",
  "fastapi==0.116.2",
  "lxml>=5.3.0",
  "openpyxl>=3.1.0",
  "pandas>=2.2.0",
  "pydantic>=2.12,<3",
  "requests==2.31.0",
  "uvicorn==0.35.0",
]

[tool.uv]
package = false
